--- a/src/app/ui/components/category/categories-sidebar/categories-sidebar.component.html
+++ b/src/app/ui/components/category/categories-sidebar/categories-sidebar.component.html
@@ -1,18 +1,19 @@
 <div class="sidebar-overlay" [class.active]="isOpen" (click)="close()"></div>
-    <div class="sidebar" [class.active]="isOpen">
-      <div class="sidebar-header">
-        <h5>Categories</h5>
-        <button class="close-btn" (click)="close()">×</button>
+<div class="sidebar" [class.active]="isOpen">
+  <div class="sidebar-header">
+    <h5>Categories</h5>
+    <button class="close-btn" (click)="close()">×</button>
+  </div>
+  <div class="sidebar-content">
+    <button class="category-button">
+      <div *ngFor="let category of mainCategories" class="menu-item" (click)="navigateToCategory(category.id)">
+        <!-- Güvenli erişim için optional chaining (?) kullanıldı ve varsayılan resim eklendi -->
+        <img [src]="category.categoryImage?.url || defaultCategoryImage" [alt]="category.name" class="category-image">
+        <span>{{ category.name }}</span>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+        </svg>
       </div>
-      <div class="sidebar-content">
-        <button class="category-button">
-        <div *ngFor="let category of mainCategories" class="menu-item" (click)="navigateToCategory(category.id)">
-          <img [src]="category.categoryImage.url" [alt]="category.name" class="category-image">
-          <span>{{ category.name }}</span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-          </svg>
-        </div>
-      </button>
-      </div>
-    </div>
+    </button>
+  </div>
+</div>
