--- a/src/app/ui/components/cookie/cookie-consent/cookie-consent.component.scss
+++ b/src/app/ui/components/cookie/cookie-consent/cookie-consent.component.scss
@@ -3,7 +3,7 @@
 // Modal tanımlamasındaki çakışmayı düzeltiyorum - Tek bir modal tanımı olacak
 .cookie-banner {
   position: fixed;
-  bottom: 0;
+  bottom: 55px;
   left: 0;
   right: 0;
   background-color: rgba(25, 31, 45, 0.95);
