--- a/src/app/ui/components/main-header/main-header.component.html
+++ b/src/app/ui/components/main-header/main-header.component.html
@@ -1,9 +1,9 @@
 <header class="main-header" [class.dark-theme]="isDarkTheme">
   <div class="container">
     <div class="header-content">
-      <!-- Logo Section with z-index to ensure it's fully visible -->
-      <div class="logo" (click)="createRipple($event)">
-        <a [routerLink]="['/home']" class="logo-link" [attr.aria-label]="'Go to home page'">
+      <!-- Logo Section -->
+      <div class="logo" (click)="createRipple($event); navigateToHome()">
+        <a class="logo-link" [attr.aria-label]="'Go to home page'">
           <img [src]="logoUrl" alt="Company Logo" class="logo-image">
         </a>
         <div class="logo-text">
@@ -16,37 +16,33 @@
         <!-- User Account Section -->
         <ng-container *ngIf="isAuthenticated; else notAuthenticated">
           <a class="user-profile-link" (click)="toggleDrawer(DrawerType.UserMenu)" [attr.aria-label]="'Open user menu'">
-            <i>
+            <i class="user-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person"
                 viewBox="0 0 16 16">
                 <path
                   d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
               </svg>
             </i>
-            <span class="btn-text">{{ currentUser?.nameSurname }}</span>
+            <span class="btn-text">{{ currentUser?.nameSurname || 'My Account' }}</span>
           </a>
         </ng-container>
 
         <ng-template #notAuthenticated>
-          <div class="auth-links" style="display: flex; align-items: center;">
-            <!-- Login Trigger ve Popover -->
-           
+          <div class="auth-links">
+            <!-- Login Trigger & Popover -->
             <div class="sign-in">
               <div class="sign-in-content" (click)="showLoginPopover($event)" [attr.aria-label]="'Sign in'">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill=#e0e0e0 class="bi bi-person-circle" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#e0e0e0" class="bi bi-person-circle" viewBox="0 0 16 16">
                   <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                   <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
                 </svg>
-                <span style="color:#e0e0e0;">Sign In</span>
+                <span>Sign In</span>
               </div>
               <app-login-popover></app-login-popover>
             </div>
             
-            <!-- <span style="color:#e0e0e0;">|</span> -->
-            <div class="divider" style="width: 2px;
-            height: 1rem;
-            background-color: #ededed;
-            margin: 0 ;"></div>
+            <!-- Separator -->
+            <div class="divider"></div>
             
             <!-- Register Link -->
             <a class="register-link" (click)="toggleDrawer(DrawerType.UserMenu)" [attr.aria-label]="'Register'">
@@ -58,7 +54,7 @@
         <!-- Cart Button -->
         <button class="btn-cart" [class.has-items]="cartItems?.length > 0"
           (click)="toggleDrawer(DrawerType.Cart)" [attr.aria-label]="'Open shopping cart'">
-          <i>
+          <i class="cart-icon">
             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-cart3"
               viewBox="0 0 16 16">
               <path
@@ -70,6 +66,8 @@
             {{ cartItems.length }}
           </span>
         </button>
+        
+        
       </div>
     </div>
   </div>
