--- a/src/app/base/components/pagination/pagination.component.scss
+++ b/src/app/base/components/pagination/pagination.component.scss
@@ -22,7 +22,7 @@ $link-color: #0000ee;
   color: $light-text;
   padding: 10px 15px;
   border-radius: 5px;
-  margin-top: 20px;
+  margin: 20px 0px;
   border: 4px solid $primary-color;
   
   .pagination-info {
